fix: couple of accessibility colour contrast fixes

--- a/src/scss/components/_intro.scss
+++ b/src/scss/components/_intro.scss
@@ -25,6 +25,7 @@
 
 			&:hover,
 			&:focus {
+				color: var(--color-accent-alt);
 				text-decoration: none;
 			}
 		}
